--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,4 @@ spring.jpa.show-sql=true
 server.port=8085
 
 # Jackson
-#spring.jackson.serialization.fail-on-empty-beans=false
+spring.jackson.serialization.fail-on-empty-beans=false
