finish the basic logging on service and controller layers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,27 @@
+# Port
+server.port=8085
+
+# Actuator endpoints
+management.endpoints.web.exposure.include=*
+management.endpoint.shutdown.enabled=true
+
+# Main log file
+logging.file=logs/app-master.log
+
+# Datasource
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:~/test
+spring.datasource.username=sa
+spring.datasource.password=
+
 # H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
-
-# Datasource
-spring.datasource.url=jdbc:h2:~/test
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-
 # Hibernate
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
-
-
-# Port
-server.port=8085
+spring.jpa.properties.hibernate.format-sql=true
 
 # Jackson
 spring.jackson.serialization.fail-on-empty-beans=false
