--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 	<properties>
 		<java.version>1.8</java.version>
 
-		<sonar.sources>src</sonar.sources>
+		<sonar.sources>src/main/java</sonar.sources>
 		<sonar.exclusions>**/target/**,**/doc/**,**/logs/**</sonar.exclusions>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<sonar.projectKey>1810Oct29SPARK_krowd-boot</sonar.projectKey>
