--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,6 @@ spring.jpa.properties.hibernate.format-sql=true
 
 # Jackson
 spring.jackson.serialization.fail-on-empty-beans=false
+
+#Cache control timeout period for 3 days
+spirng.resources.cache.cachecontrol.max-age=259200
