--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ logging.file=logs/app-master.log
 
 # Datasource
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:~/test
 spring.datasource.username=sa
 spring.datasource.password=
 
@@ -26,5 +26,5 @@ spring.jpa.properties.hibernate.format-sql=true
 # Jackson
 spring.jackson.serialization.fail-on-empty-beans=false
 
-#Cache control timeout period for 3 days
-spirng.resources.cache.cachecontrol.max-age=259200
+# Cache Control timeout period for 3 days
+spring.resources.cache.cachecontrol.max-age=259200
